--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,8 @@
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="{{ "css/bootstrap.min.css" | prepend: site.baseurl }}">
-  <script src="{{ "js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+  <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 </head>
