--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,10 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
         {{ content }}
-      </div>
-    </div>
 
-    {% include footer.html %}
-
+<script type="text/javascript" src="{{ "js/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
   </body>
 
 </html>
