--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 
         {{ content }}
 
-<script type="text/javascript" src="{{ "js/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
-<script type="text/javascript" src="{{ "js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
   </body>
 
 </html>
