--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{{ "/" | prepend: site.baseurl }}">
         <img width="20px" height="20px" src="{{ "/img/logo.svg" | prepend: site.baseurl }}"/>
       </a>
     </div>
