--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,9 @@ body {
   margin: 50px;
   padding-top: 50px;
 }
+.home-content{
+  margin: 50px;
+}
 .home-header{
   padding-top: 120px;
   padding-bottom: 80px;
