--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
-        <li><a href="#">About</a></li>
-        <li><a href="#">Installation</a></li>
-        <li><a href="#">News</a></li>
+        <li><a href="{{ "/about/" | prepend: site.baseurl }}">About</a></li>
+        <li><a href="{{ "/installation" | prepend: site.baseurl }}">Installation</a></li>
+        <li><a href="{{ "/news/" | prepend: site.baseurl }}">News</a></li>
 
       </ul>
 
