--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,9 @@
 ---
 layout: default
 ---
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+<div class="wrap-content">
+<div class="page-header">
+  <h1>{{ page.title }}<br></h1>
+</div>
+{{ content }}
+</div>
