--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">GitHub</a></li>
+        <li><a href="https://github.com/dasom-im">GitHub</a></li>
 
       </ul>
     </div><!-- /.navbar-collapse -->
