--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,3 +8,17 @@ layout: default
 {% if page.author %} {{ page.author }} {% endif %}
 {{ content }}
 </div>
+<!-- Pagination links -->
+{% if page.previous.url %}
+<h3><a href="{{page.previous.url}}" style="color:white;">{{ page.previous.title }}</a><h3>
+<p>{{ page.previous.date | date: "%Y.%m.%d" }}</p>
+
+
+{% else %}
+{% endif %}
+{% if page.next.url %}
+
+<h3><a href="{{page.next.url}}" style="color:white;">{{ page.next.title }}</a><h3>
+<p>{{ page.previous.date | date: "%Y.%m.%d" }}</p>
+{% else %}
+{% endif %}
