--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,9 +17,10 @@
   <link rel="icon" type="image/png" sizes="96x96" href="{{ "/img/favicon-96x96.png" | prepend: site.baseurl }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ "/img/favicon-16x16.png" | prepend: site.baseurl }}">
   <link rel="manifest" href="{{ "/img/manifest.json" | prepend: site.baseurl }}">
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#34495e">
   <meta name="msapplication-TileImage" content="{{ "/img/ms-icon-144x144.png" | prepend: site.baseurl }}">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#34495e">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#34495e">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
