--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@ layout: default
 <hr>
 <!-- Pagination links -->
 {% if page.previous.url %}
+<p>Previous</p>
 <h3><a href="{{page.previous.url}}" >{{ page.previous.title }}</a></h3>
 <p>{{ page.previous.date | date: "%Y.%m.%d" }}</p>
 
@@ -18,7 +19,7 @@ layout: default
 {% else %}
 {% endif %}
 {% if page.next.url %}
-
+<p>Next</p>
 <h3><a href="{{page.next.url}}" >{{ page.next.title }}</a></h3>
 <p>{{ page.next.date | date: "%Y.%m.%d" }}</p>
 {% else %}
