--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="{{ "/getinvolved/" | prepend: site.baseurl }}">Get Involved</a></li>
         <li><a href="https://github.com/dasom-im">GitHub</a></li>
 
       </ul>
