--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
 
         <li><a href="{{ "/about/" | prepend: site.baseurl }}">About</a></li>
         <li><a href="{{ "/installation" | prepend: site.baseurl }}">Installation</a></li>
+        <li><a href="https://github.com/dasom-im/dasom/wiki">Wiki</a></li>
         <li><a href="{{ "/news/" | prepend: site.baseurl }}">News</a></li>
 
       </ul>
