--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav">
 
         <li><a href="{{ "/about/" | prepend: site.baseurl }}">About</a></li>
-        <li><a href="{{ "/installation" | prepend: site.baseurl }}">Installation</a></li>
+        <li><a href="{{ "/get-dasom" | prepend: site.baseurl }}">Get Dasom</a></li>
         <li><a href="https://github.com/dasom-im/dasom/wiki">Wiki</a></li>
         <li><a href="{{ "/news/" | prepend: site.baseurl }}">News</a></li>
 
